# Uni-Projects

./: readme.txt
C/1) Scheduler/: Projektbeschreibung.txt
C/1) Scheduler/include/: Queue.h
C/1) Scheduler/src/: LCFS-PR.c  MLF.c  Queue.c  RR.c  SJN.c  SRTN.c
C/2) Raytracing/: Projektbeschreibung.txt
C/2) Raytracing/src/: main.c
C/3) Bäckerei/: Projektbeschreibung.txt
C/3) Bäckerei/src/: bakery.c  management.c  order.c  supplier.c  warehouse.c  worker.c
C/4) Bankier-Alorithmus/: Projektbeschreibung.txt
C/4) Bankier-Alorithmus/src/: bankier.c  matrix.c  readme.txt
C/4) Bankier-Alorithmus/src/libs/: parser.c
HTML, CSS3/: readme.txt
JAVA/Projekte mit Vorgaben/: readme.txt
JAVA/Projekte mit Vorgaben/Einfache Projekte/1) Netzwerk von Neuronen/: Projektbeschreibung.txt
JAVA/Projekte mit Vorgaben/Einfache Projekte/2) Küche aufräumen/: Projektbeschreibung.txt
JAVA/Projekte mit Vorgaben/Einfache Projekte/3) JUnit-Tests/: Projektbeschreibung.txt
JAVA/Projekte ohne Vorgaben/1) SMTPClient/: readme.txt
JAVA/Projekte ohne Vorgaben/2) clocks/: Projektbeschreibung.txt
JAVA/Projekte ohne Vorgaben/2) clocks/src/: readme.txt
JAVA/Projekte ohne Vorgaben/3) JAVA Message Service/: readme.txt
Networking/Client-Server/: CMakeLists.txt  client.c  server.c
Networking/Client-Server/lib/: server_functions.c  server_functions.h  server_loop.c  server_loop.h  text_file.c  text_file.h
Networking/NTP/: CMakeLists.txt  main_client.c
Networking/NTP/include/: client.h  network.h  packet.h  util.h
Networking/NTP/src/: client.c  network.c  packet.c  util.c
Networking/peer-to-peer/: CMakeLists.txt  peer.c
Networking/peer-to-peer/include/: hash_table.h  neighbour.h  packet.h  requests.h  server.h  util.h
Networking/peer-to-peer/src/: hash_table.c  neighbour.c  packet.c  requests.c  server.c  util.c
OpenStack/: requirements.txt
OpenStack/Kolla/: requirements.txt
OpenStack/OurSky/Kolla/: globals.yml
Python/: Readme.txt
Python/1) Lineare Gleichungssystem/: Projektbeschreibnug.txt
Python/1) Lineare Gleichungssystem/src/: main.py
Python/2) Eigenfaces/: Projektbeschreibnug.txt
Python/2) Eigenfaces/src/: main.py
Python/3) Keyframe Animation/: Projektbeschreibnug.txt
Python/3) Keyframe Animation/src/: main.py
apple-collector-YAKINDU/: TestEssentials.sctunit  apple_collector.ysc  readme.txt
apple-collector-systemc/: .gitignore  CMakeLists.txt  Dockerfile  ha2  readme.txt
apple-collector-systemc/src/: AppleCollector.h  TestBench.cpp  TestBench.h  main.cpp
usage-script/: resources_usage.bash
(+68 files in other folders)
